--- a/my-express-project/package.json
+++ b/my-express-project/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "moongoose": "^0.0.5",
-    "mysql2": "^3.9.6"
+    "mysql2": "^3.9.6",
+    "nodemon": "^3.1.0"
   }
 }
