--- a/my-express-project/package.json
+++ b/my-express-project/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "com.adrenak.univoice": "^3.0.0",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "moongoose": "^0.0.5",
