--- a/my-express-project/package.json
+++ b/my-express-project/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.9.6",
     "node-media-server": "^2.6.6",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "wrtc": "^0.4.7"
   }
 }
